--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@reduxjs/toolkit": "^2.10.1",
     "framer-motion": "^12.23.24",
     "jspdf": "^4.1.0",
